--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <netty.version>4.1.32.Final</netty.version>
+        <msgpack.version>0.6.12</msgpack.version>
     </properties>
 
     <dependencies>
@@ -25,6 +26,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack</artifactId>
+            <version>${msgpack.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
