--- a/org.jiage.srpc.server/pom.xml
+++ b/org.jiage.srpc.server/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>org.jiage.srpc.server</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.jiage.srpc</groupId>
+            <artifactId>org.jiage.srpc.api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
