--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <msgpack.version>0.6.12</msgpack.version>
         <payflow.version>4.46</payflow.version>
         <goson.version>2.8.6</goson.version>
+        <jjwt.version>0.9.0</jjwt.version>
+        <okhttp.version>3.10.0</okhttp.version>
     </properties>
 
     <dependencies>
@@ -50,6 +52,32 @@
             <artifactId>gson</artifactId>
             <version>${goson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>maven2</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 
 </project>
