--- a/org.jiage.srpc.server/src/test/resources/test-application.properties
+++ b/org.jiage.srpc.server/src/test/resources/test-application.properties
@@ -1,4 +1,8 @@
-rabbitmq.exchange=loops_account_msg
 rabbitmq.host=dt.mq.lan
 rabbitmq.username=admin
 rabbitmq.password=admin
+rabbitmq.exchange=test.transaction.mq
+rabbitmq.queue.transaction=test.transaction.queue
+rabbitmq.queue=test.queue
+rabbitmq.routing=test.transaction.routing
+
