--- a/org.jiage.srpc.server/pom.xml
+++ b/org.jiage.srpc.server/pom.xml
@@ -38,6 +38,11 @@
             <version>${okhttp.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.github.kostaskougios</groupId>
+            <artifactId>cloning</artifactId>
+            <version>${cloning.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
